--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,63 +8,12 @@ input.error {
     border: solid 1px #ebccd1;
 }
 
-body {
-    font-family: 'Oswald', sans-serif;
-    padding: 0 !important;
+#nav-list {
+    margin-top:20px;
 }
 
-.header {
-    width: 100%;
-    background: #000000;
-}
-
-.header .navbar ul li a {
-    font-size: 16px;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
-    color: #ffffff;
-    padding: 0 15px;
-    border-right: 2px solid #474747;
-}
-
-.header .navbar ul li a:hover,
-.header .navbar ul li a:focus, .header .navbar a.selected {
-    color: #eece6c;
-    background: transparent;
-}
-
-.navbar {
-    margin-bottom: 0px !important;
-}
-
-.navbar-right {
-    margin-top: -13px;
-!important;
-}
-
-.header .navbar .navbar-header .navbar-brand {
-    height: 80px;
-    padding: 10px 0 0;
-    outline: none;
-}
-
-.header .navbar .navbar-header .navbar-brand img {
-    height: 100%;
-}
-
-.header .navbar ul.main-nav {
-    padding: 38px 0 0 20px;
-}
-
-.custom-container {
-    width: 70%;
-}
-
-.navigation-container {
-    width: 80%;
-    height: 80%;
-    color: white;
-    margin: 0 auto;
+#logo {
+    margin-top: -25px;
 }
 
 #post-list{
@@ -73,7 +22,7 @@ body {
 }
 
 #post-list li{
-    margin-top: 120px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
@@ -81,8 +30,198 @@ body {
 
 #post-title{
     font-weight: bold;
+    margin-top:30px;
 }
 
 #rate-post{
     margin-top:55px;
+}
+
+#post-grade {
+    background-color: #ffffff !important;
+    margin-top:18px;
+    padding: 11px 10px !important;
+}
+
+#rating { list-style:none; }
+#rating li { display:inline; float:left; }
+#rating li { display:block; width:30px; height:30px; border:1px solid #888; background-color:#333;
+    text-indent:-9999px; box-shadow:0 0 5px #888; border-radius:40px; }
+
+#ratinginfo { clear:left; width:350px;
+    margin-left:163px; }
+#ratinginfo p { text-align:center; padding:10px;
+    box-shadow:0 0 5px #888; border-radius:40px; }
+
+.nav-item {
+    margin-left:10px;
+}
+
+
+/*
+    DEMO STYLE
+*/
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
+}
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background:  #000000;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 0 !important;
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar .sidebar-header {
+   /*padding: 20px;*/
+    background: #6d7fcc;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+    content: '\e259';
+    display: block;
+    position: absolute;
+    right: 20px;
+    font-family: 'Glyphicons Halflings';
+    font-size: 0.6em;
+}
+a[aria-expanded="true"]::before {
+    content: '\e260';
+}
+
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article, a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+
+
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#content {
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
 }
