--- a/src/main/resources/templates/shared/fragments/header.html
+++ b/src/main/resources/templates/shared/fragments/header.html
@@ -9,6 +9,8 @@
     <script src="/static/jquery/jquery.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/jquery-validation/jquery.validate.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
 </head>
 <body>
 
