--- a/src/main/resources/templates/shared/navigation.html
+++ b/src/main/resources/templates/shared/navigation.html
@@ -1,19 +1,28 @@
-<nav class="navbar" th:fragment="navbar" xmlns:th="http://www.thymeleaf.org"
-     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                data-target="#myNavbar">
-            <span class="icon-bar"></span> <span class="icon-bar"></span> <span
-                class="icon-bar"></span>
-        </button>
-       <!-- <a class="navbar-brand" th:href="@{/check-item-availability}">
-            <img th:src="@{/static/img/logo-small.png}"/>
-        </a>-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand">
+            <img id="logo" src="https://i.pinimg.com/originals/7d/4a/e9/7d4ae9e917d6288b09926d1d48b2cece.jpg" width="90" height="70" alt="">
+        </a>
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">-->
+            <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto" id="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home
+                        <!--<span class="sr-only">(current)</span>-->
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse" id="top-menu">
-        <ul class="nav navbar-nav">
-            <li>Posts</li>
-            <li>test</li>
-        </ul>
-    </div><!-- /.navbar-collapse -->
 </nav>
