--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,7 +16,7 @@ input.error {
     margin-top: -25px;
 }
 
-.post-list{
+.post-list, .post-content{
     list-style-type: none !important;
     width: 60%;
 }
@@ -30,7 +30,7 @@ input.error {
 
 .post-title{
     font-weight: bold;
-    margin-top:100px;
+    margin-bottom:20px;
 }
 
 .rate-post{
@@ -56,7 +56,8 @@ input.error {
 }
 
 .rating { list-style:none;
-    margin-left:200px;}
+    margin-left:200px;
+    margin-top:31px;}
 .rating li { display:inline; float:left; }
 .rating li { display:block; width:30px; height:30px; border:1px solid #888; background-color:#333;
     text-indent:-9999px; box-shadow:0 0 5px #888; border-radius:40px; }
@@ -84,6 +85,7 @@ color: black !important;
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
+
 }
 
 p {
@@ -124,6 +126,29 @@ a, a:hover, a:focus {
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
+/*---------------------RIGHT--------*/
+.well {
+    min-width:500px;
+    height:882px;
+}
+.month {
+    padding: 10px 10px;
+}
+
+.year {
+    padding:10px 10px;
+}
+
+.years-list {
+    border-bottom: 1px solid #47748b;
+}
+.months-list {
+    margin-top:0 !important;
+}
+/*-----------------------------------*/
+.search-title {
+    color: black !important;
+}
 .wrapper {
     display: flex;
     align-items: stretch;
@@ -132,7 +157,7 @@ a, a:hover, a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background: #f5f5f5;
     color: #fff;
     transition: all 0.3s;
 }
@@ -208,16 +233,18 @@ ul.CTAs a {
     margin-bottom: 5px;
 }
 
-/*a.download {*/
-    /*background: #fff;*/
-    /*color: #7386D5;*/
-/*}*/
-
 a.article, a.download {
     background: #6d7fcc !important;
     color: #fff !important;
 }
 
+.btn-comment{
+    margin-top:31px;
+}
+
+.comment-content{
+    width:100%;
+}
 
 
 /* ---------------------------------------------------
@@ -242,4 +269,25 @@ a.article, a.download {
     #sidebarCollapse span {
         display: none;
     }
+}
+
+.post-text{
+    border-bottom: 1px solid #47748b;
+    margin-left:0 !important;
+}
+
+#sidebar{
+    height:882px;
+}
+
+.post-grade-text{
+    margin-left:0 !important;
+}
+
+.comments-textarea{
+    margin-top:130px;
+}
+
+#comment-textarea{
+    min-width:100%;
 }
